--- a/task1/step_5.ipynb
+++ b/task1/step_5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -12,7 +12,21 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.ensemble import VotingClassifier\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "import xgboost as xgb"
    ]
   },
   {
@@ -52,8 +66,6 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "\n",
     "def prepare_labels(train, test):\n",
     "    # нужно категориальные признаки пометить числами, а в тестовой выборке есть новые данные к сожалению\n",
     "    all_data = pd.concat([train, test])\n",
@@ -64,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -78,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -91,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -104,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -116,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -128,15 +140,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "\n",
     "def testClf(clf, X, y):\n",
     "    scores = cross_val_score(clf, X, y, cv=StratifiedKFold(n_splits=5, shuffle=True, random_state=42), scoring='roc_auc')\n",
     "    print(\"AUC: {} (+/- {})\".format(scores.mean(), scores.std() * 2))"
@@ -144,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -393,7 +402,7 @@
        "max        31.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,8 +429,6 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "\n",
     "%time testClf(RandomForestClassifier(n_estimators=100, min_samples_split=5, max_leaf_nodes=60, max_depth=20), X, y)"
    ]
   },
@@ -455,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -521,9 +528,6 @@
     }
    ],
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
     "XX = StandardScaler().fit_transform(X_d)\n",
     "%time testClf(LogisticRegression(C=0.001), XX, y_d)"
    ]
@@ -572,7 +576,6 @@
     }
    ],
    "source": [
-    "from sklearn.decomposition import PCA\n",
     "sScaler = StandardScaler(copy=True, with_mean=True, with_std=True)\n",
     "xScaled = sScaler.fit_transform(X_d)\n",
     "forPca = pd.DataFrame(xScaled)\n",
@@ -601,7 +604,6 @@
     }
    ],
    "source": [
-    "from sklearn.naive_bayes import GaussianNB\n",
     "%time testClf(GaussianNB(), X_d, y_d)"
    ]
   },
@@ -623,7 +625,6 @@
     }
    ],
    "source": [
-    "from sklearn.neural_network import MLPClassifier\n",
     "%time testClf(MLPClassifier(),X_d, y_d)"
    ]
   },
@@ -646,7 +647,6 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
     "mlpParams = {'solver': ['lbfgs'], 'max_iter': [1500], 'alpha': 10.0 ** -np.arange(1, 7), 'hidden_layer_sizes':np.arange(5, 12)}\n",
     "\n",
     "gridMLP = GridSearchCV(MLPClassifier(), mlpParams)\n",
@@ -794,7 +794,6 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
     "%time testClf(GradientBoostingClassifier(), X, y)"
    ]
   },
@@ -846,13 +845,12 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import AdaBoostClassifier\n",
     "%time testClf(AdaBoostClassifier(), X, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -861,17 +859,199 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AUC: 0.735409868290503 (+/- 0.0032425734495659026)\n"
+      "AUC: 0.757765626665458 (+/- 0.0027627909176038074)\n",
+      "CPU times: user 20min 53s, sys: 21.7 s, total: 21min 15s\n",
+      "Wall time: 21min 46s\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.ensemble import VotingClassifier\n",
-    "clf1 = GradientBoostingClassifier()\n",
-    "clf2 = AdaBoostClassifier()\n",
-    "clf3 = RandomForestClassifier()\n",
+    "clf1 = GradientBoostingClassifier(n_estimators=300)\n",
+    "clf2 = AdaBoostClassifier(n_estimators=300)\n",
+    "clf3 = RandomForestClassifier(n_estimators=300)\n",
     "eclf = VotingClassifier(estimators=[('gb', clf1), ('ada', clf2), ('rfc', clf3)], voting='soft')\n",
-    "testClf(eclf, X, y) # короче надо подбирать гиперпараметры и xgboost"
+    "%time testClf(eclf, X, y) # короче надо подбирать гиперпараметры и xgboost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 5min 59s, sys: 5.69 s, total: 6min 5s\n",
+      "Wall time: 6min 19s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "VotingClassifier(estimators=[('gb', GradientBoostingClassifier(criterion='friedman_mse', init=None,\n",
+       "              learning_rate=0.1, loss='deviance', max_depth=3,\n",
+       "              max_features=None, max_leaf_nodes=None,\n",
+       "              min_impurity_split=1e-07, min_samples_leaf=1,\n",
+       "              min_samples_split=2, min_w...mators=300, n_jobs=1, oob_score=False, random_state=None,\n",
+       "            verbose=0, warm_start=False))],\n",
+       "         n_jobs=1, voting='soft', weights=None)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time eclf.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pred = eclf.predict_proba(te)\n",
+    "# 0.7549 in public"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def save(fname, pred, test):\n",
+    "    res1 = pd.DataFrame()\n",
+    "    res1['_ID_'] = test.index\n",
+    "    res1['_VAL_'] = pred\n",
+    "    res1.to_csv(\"submissions/{0}.csv\".format(fname), index=False)\n",
+    "    return res1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "res = save(\"ensemble_gbc_ada_rfc\", pred[:,1], te)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC: 0.7570767305789323 (+/- 0.005244599130536529)\n",
+      "CPU times: user 12min 18s, sys: 15.1 s, total: 12min 33s\n",
+      "Wall time: 5min 56s\n"
+     ]
+    }
+   ],
+   "source": [
+    "gbm = xgb.XGBClassifier(max_depth=10, n_estimators=300, learning_rate=0.05, nthread=4)\n",
+    "%time testClf(gbm, X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "clf1 = GradientBoostingClassifier(n_estimators=300)\n",
+    "clf2 = AdaBoostClassifier(n_estimators=300)\n",
+    "clf3 = RandomForestClassifier(n_estimators=300, max_depth=20)\n",
+    "clf4 = xgb.XGBClassifier(max_depth=10, n_estimators=300, learning_rate=0.05, nthread=4)\n",
+    "eclf = VotingClassifier(estimators=[('gb', clf1), ('ada', clf2), ('rfc', clf3), ('xgb', clf4)], voting='soft')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC: 0.7625974115839058 (+/- 0.0037793467900848815)\n",
+      "CPU times: user 30min 1s, sys: 28.4 s, total: 30min 29s\n",
+      "Wall time: 23min 1s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time testClf(eclf, X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 8min 15s, sys: 7.52 s, total: 8min 22s\n",
+      "Wall time: 6min 33s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "VotingClassifier(estimators=[('gb', GradientBoostingClassifier(criterion='friedman_mse', init=None,\n",
+       "              learning_rate=0.1, loss='deviance', max_depth=3,\n",
+       "              max_features=None, max_leaf_nodes=None,\n",
+       "              min_impurity_split=1e-07, min_samples_leaf=1,\n",
+       "              min_samples_split=2, min_w...logistic', reg_alpha=0, reg_lambda=1,\n",
+       "       scale_pos_weight=1, seed=0, silent=True, subsample=1))],\n",
+       "         n_jobs=1, voting='soft', weights=None)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time eclf.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pred = eclf.predict_proba(te) # 0.7603\n",
+    "res = save(\"ensemble_gbc_ada_rfc_XGB\", pred[:,1], te)"
    ]
   }
  ],
